--- a/retopdf11/index.html
+++ b/retopdf11/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <title>Biografía de David Bowie</title>
     <link rel="stylesheet" href="estilos.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
